--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
                 <h3>Currently</h3>
                 <ul>
                     <li>
+                        interning on the simulation team @
+                        <span class="lavender">Astrobotic (Fall 2023)</span> 
+                         where I'm helping send stuff to moon
+                    </li>
+                    <li>
                         data science major + regents' & chancellors' scholar @
                         <span class="lavender oneline">
                          uc berkeley (2022)
