--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <li>
                         interning on the simulation team @
                         <span class="lavender">Astrobotic (Fall 2023)</span> 
-                         where I'm helping send stuff to moon
+                         where I'm helping send stuff to the moon
                     </li>
                     <li>
                         data science major + regents' & chancellors' scholar @
