--- a/index.html
+++ b/index.html
@@ -21,34 +21,27 @@
                 </h1>
                 <div class="divider"></div>
                 <p>
-                    I'm interested in building software for tools & automation, IoT devices, robotics and education among other things.
+                    I'm interested in building innovative software for robotics, education, businesses, and accessibility.
                 </p>
             </div>
             <div class="current">
-                <h3>Currently</h3>
+                <h3>Education</h3>
                 <ul>
-                    <li>
-                        interning on the simulation team @
-                        <span class="lavender">Astrobotic (Fall 2023)</span> 
-                         where I'm helping send stuff to the moon
-                    </li>
                     <li>
                         data science major + regents' & chancellors' scholar @
                         <span class="lavender oneline">
                          uc berkeley (2022)
                         </span>
                     </li>
-                    <li>
-                        building
-                        <a href="https://github.com/amandaratio/" target="_blank" class="indigo">
-                            things
-                        </a>
-                    </li>
                 </ul>
             </div>
             <div class="previous">
                 <h3>Previously</h3>
                 <ul>
+                    <li>
+                      worked @ <span class="lavender">Astrobotic (2023-2025)</span>
+                      on the space robotics team as a simulation software engineer
+                    </li>
                     <li>
                         interned @ 
                         <span class="lavender">PagerDuty (2021)</span> 
@@ -57,10 +50,7 @@
                     <li>
                         interned @ 
                         <span class="lavender">PagerDuty (2020)</span> 
-                        where I worked on the new
-                        <a href="https://developer.pagerduty.com/docs/rest-api-v2/audit-records-api/" target="_blank" class="indigo">
-                            Audit API
-                        </a>
+                        where I worked on the new Audit API
                     </li>
                     <li>
                         Code2040 Fellow (2020)
